--- a/index.html
+++ b/index.html
@@ -11,15 +11,30 @@
             <img height="30" width="92" id="google" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png" alt="Google Logo">
             <div class="search-bar">
                 <input type="text">
-                <a href=""></a>
+                <div id="button">
+                    <button id="search-button">Search</button>
+                </div>
             </div>
             <div id="sign-in">
-                <a href="">..</a>
-                <a href="">Sign in</a>
+                <a id="sign-in-button" href="">Sign in</a>
             </div>
         </div>
         <div class="navigation">
-
+            <div class="navbar">
+                <div id="left">
+                    <a href="">All</a>
+                    <a href="">News</a>
+                    <a href="">Videos</a>
+                    <a href="">Shopping</a>
+                    <a href="">Maps</a>
+                    <a href="">More</a>
+                </div>
+                <div id="right">
+                    <a href="">Settings</a>
+                    <a href="">Tools</a>
+                </div>
+                
+            </div>
 
         </div>
     </div>
